[package]
name = "init_with"
version = "0.1.1"
authors = ["QuietMisdreavus <bryan@icesoldier.me>"]
description = "Helper trait to initilize an array with a function"
documentation = "https://shiva.icesoldier.me/init_with/init_with/"
repository = "https://github.com/QuietMisdreavus/init-with-rs"
keywords = ["no_std"]
license = "Unlicense"
readme = "README.md"
