[package]
name = "init_with"
version = "1.1.0"
authors = ["QuietMisdreavus <grey@quietmisdreavus.net>"]
description = "Helper trait to initilize an array with a function"
documentation = "https://docs.rs/init_with"
repository = "https://github.com/QuietMisdreavus/init-with-rs"
categories = ["rust-patterns"]
keywords = ["no_std", "functional"]
license = "Unlicense"
readme = "README.md"
